[package]
name = "zenore"
version = "0.1.0"
edition = "2021"
description = "zenORE – a lightweight PoW miner + tools for an ORE-style testnet fork"
license = "MIT"
repository = "https://github.com/YOUR_USERNAME/zenore"

[dependencies]
anyhow = "1"
bincode = "1"
clap = { version = "4", features = ["derive"] }
crossbeam-channel = "0.5"
indicatif = "0.17"
rand = "0.8"
rayon = "1.10"
sha2 = "0.10"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
solana-client = "1.18"
solana-sdk = "1.18"
solana-transaction-status = "1.18"
bs58 = "0.5"
dirs = "5"

[profile.release]
lto = true
codegen-units = 1
opt-level = "s"
panic = "abort"
strip = "symbols"
